# llm-eval

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic_eval.cpp  compare_models.cpp
include/: llm_eval.hpp
